full/apps/nginx/deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-jay
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest # Use the desired Nginx image
        ports:
        - containerPort: 80
        volumeMounts:
        - name: custom-config
          mountPath: /etc/nginx/conf.d/custom.conf
          subPath: custom.conf
      volumes:
      - name: custom-config
        configMap:
          name: nginx-custom-configuration
          items:
          - key: custom.conf
            path: custom.conf
