full/apps/nginx/deploy/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    - port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: nginx
  type: LoadBalancer
